# CoreTransport

./: CMakeLists.txt  CoreTransport.vs10.sln  README.md
CAuth/: CAuth.vcxproj  CAuth.vcxproj.filters  CMakeLists.txt
CAuth/CAuth/: ca_scram.c  ca_scram.h
CAuth/CAuth.xcodeproj/: project.pbxproj
CAuth/CAuth.xcodeproj/xcshareddata/xcschemes/: CAuth-OSX.xcscheme  CAuth-iOS.xcscheme
CAuth/CAuth.xcodeproj/xcuserdata/jmoulton.xcuserdatad/xcschemes/: xcschememanagement.plist
CBlock/: Block.h  CBlock.vcxproj  CBlock.vcxproj.filters  runtime.c
CTransport/: CMakeLists.txt  CTransport.h  CTransport.vcxproj  CTransport.vcxproj.filters
CTransport/CTransport/: CTConnection.h  CTCoroutine.h  CTDNS.h  CTEndian.h  CTError.h  CTFile.c  CTFile.h  CTPlatform.c  CTPlatform.h  CTQueue.c  CTQueue.h  CTReQL.c  CTReQL.h  CTSSL.c  CTSSL.h  CTSSLKey.h  CTSocket.c  CTSocket.h  CTSystem.h  CTURL.h  CTransportAPI.c  CTransportAPI.h
CTransport/CTransport.xcodeproj/: project.pbxproj
CTransport/CTransport.xcodeproj/xcshareddata/xcschemes/: CTransport-OSX.xcscheme  CTransport-iOS.xcscheme
CTransport/CTransport.xcodeproj/xcuserdata/jmoulton.xcuserdatad/xcschemes/: xcschememanagement.plist
CTransport/protobuf/: protobuf-c.c  ql2.pb-c.c  ql2.pb-c.h
CXReQL/: CXReQL.h  CXReQL.vcxproj  CXReQL.vcxproj.filters
CXReQL/CXReQL/: CXReQLConnection.cpp  CXReQLConnection.h  CXReQLCursor.cpp  CXReQLCursor.h  CXReQLInterface.cpp  CXReQLInterface.h  CXReQLQuery.cpp  CXReQLQuery.h  CXReQLService.cpp  CXReQLService.h  CXReQLSession.cpp  CXReQLSession.h
CXTransport/: CMakeLists.txt  CXReQL.h  CXTransport.h  CXTransport.vcxproj  CXTransport.vcxproj.filters  CXURL.h
CXTransport/CXReQL/: CXReQLCursor.cpp  CXReQLCursor.h  CXReQLInterface.cpp  CXReQLInterface.h  CXReQLQuery.cpp  CXReQLQuery.h  CXReQLSession.cpp  CXReQLSession.h
CXTransport/CXTransport/: CXConnection.cpp  CXConnection.h  CXCursor.cpp  CXCursor.h  CXQueue.cpp  CXQueue.h
CXTransport/CXTransport.xcodeproj/: project.pbxproj
CXTransport/CXTransport.xcodeproj/xcshareddata/xcschemes/: CXTransport-iOS.xcscheme  CXTransport.xcscheme
CXTransport/CXTransport.xcodeproj/xcuserdata/jmoulton.xcuserdatad/xcschemes/: xcschememanagement.plist
CXTransport/CXURL/: CXURLCursor.cpp  CXURLCursor.h  CXURLInterface.cpp  CXURLInterface.h  CXURLRequest.cpp  CXURLRequest.h  CXURLSession.cpp  CXURLSession.h
CoreTransport.xcworkspace/: contents.xcworkspacedata
CoreTransport.xcworkspace/xcshareddata/xcdebugger/: Breakpoints_v2.xcbkptlist
CoreTransport.xcworkspace/xcuserdata/jmoulton.xcuserdatad/: UserInterfaceState.xcuserstate
CoreTransport.xcworkspace/xcuserdata/jmoulton.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NSTransport/: NSTReQL.h  NSTURL.h  NSTransport.h
NSTransport/NSTReQL/: NSTReQLCursor.h  NSTReQLCursor.m  NSTReQLInterface.h  NSTReQLInterface.m  NSTReQLQuery.h  NSTReQLQuery.m  NSTReQLSession.h  NSTReQLSession.m
NSTransport/NSTURL/: NSTURLCursor.h  NSTURLCursor.m  NSTURLInterface.h  NSTURLInterface.m  NSTURLRequest.h  NSTURLRequest.m  NSTURLSession.h  NSTURLSession.m
NSTransport/NSTransport/: NSTConnection.h  NSTConnection.m  NSTCursor.h  NSTCursor.m  NSTQueue.h  NSTQueue.m
NSTransport/NSTransport.xcodeproj/: project.pbxproj
NSTransport/NSTransport.xcodeproj/xcuserdata/jmoulton.xcuserdatad/xcschemes/: xcschememanagement.plist
Samples/HappyEyeballs/: CMakeLists.txt  CTAppInterface.h  CTDeviceInput.h  HappyEyeballs.c  HappyEyeballs.vcxproj  HappyEyeballs.vcxproj.filters  main.c  main.cpp  main.m  main.mm
Samples/HappyEyeballs/Cocoa/: CTApplication.h  CTApplication.m  CTApplicationDelegate.h  CTApplicationDelegate.m  CTMenu.h  CTMenu.m  CTViewController.h  CTViewController.m
Samples/HappyEyeballs/HappyEyeballs-iOS/: Info.plist
Samples/HappyEyeballs/HappyEyeballs.xcodeproj/: project.pbxproj
Samples/HappyEyeballs/HappyEyeballs.xcodeproj/xcshareddata/xcschemes/: HappyEyeballs-OSX.xcscheme  HappyEyeballs-iOS.xcscheme
Samples/HappyEyeballs/HappyEyeballs.xcodeproj/xcuserdata/jmoulton.xcuserdatad/xcschemes/: xcschememanagement.plist
ctReQL/: ctReQL.h  ctReQL.vcxproj  ctReQL.vcxproj.filters
ctReQL/ctReQL/: ReqlAPI.c  ReqlAPI.h  ReqlCoroutine.h  ReqlError.h  ReqlFile.c  ReqlFile.h  ReqlSSL.c  ReqlSSL.h  ReqlSSLKey.c  ReqlSSLKey.h  ReqlSocket.c  ReqlSocket.h
ctSCRAM/: ctSCRAM.vcxproj  ctSCRAM.vcxproj.filters
ctSCRAM/ctSCRAM/: ct_scram.c  ct_scram.h
dill/: CMakeLists.txt  DartConfiguration.tcl  ipaddr.c  libdill.h  nsswitch.conf  poll.c.inc  term.c  utils.h
dill/dill.xcodeproj/: project.pbxproj
dill/dill.xcodeproj/xcshareddata/xcschemes/: dill-OSX.xcscheme  dill-iOS.xcscheme
dill/dill.xcodeproj/xcuserdata/jmoulton.xcuserdatad/xcschemes/: xcschememanagement.plist
dill/dns/: dns.c  dns.h
